--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
         <title>Landing Page</title>
     </head>
     <body>
-
+        <div class="header">
+            <h1>Header Logo</h1>
+            <a href="###">header link one</a>
+            <a href="###">header link two</a>
+            <a href="###">header link three</a>
+        </div>
+        <div class="intro">
+            <h2>This website is awesome</h2>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the colour has a lower contrast.</p>
+            <button>Sign up</button>
+            <img src="###" alt="This is a placeholder for an image.">
+        </div>
     </body>
 </html>
