--- a/index.html
+++ b/index.html
@@ -17,5 +17,25 @@
             <button>Sign up</button>
             <img src="###" alt="This is a placeholder for an image.">
         </div>
+        <div class="random-info">
+            <h2>Some random information</h2>
+            <div class="ran-img">
+                <img src="###" alt="random image">
+                <div class="text">This is some subtext under an illustration or image</div>
+            </div>
+            <div class="ran-img">
+                <img src="###" alt="random image">
+                <div class="text">This is some subtext under an illustration or image</div>
+            </div>
+            <div class="ran-img">
+                <img src="###" alt="random image">
+                <div class="text">This is some subtext under an illustration or image</div>
+            </div>
+            <div class="ran-img">
+                <img src="###" alt="random image">
+                <div class="text">This is some subtext under an illustration or image</div>
+            </div>
+        </div>
+    
     </body>
 </html>
