--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                 <div class="text">This is some subtext under an illustration or image</div>
             </div>
         </div>
-    
+        <div class="quote">
+            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p><strong>-Thor, God of Thunder</strong></p>
+        </div>
+
     </body>
 </html>
