--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
             </div>
             <button>Sign up</button>
         </div>
-        
+        <div class="footer">
+            <div>Copyright The Odin Project 2021</div>
+        </div>
 
 
     </body>
