--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="###">header link three</a>
         </div>
         <div class="intro">
-            <h2>This website is awesome</h2>
+            <h2 class="main">This website is awesome</h2>
             <p>This website has some subtext that goes here under the main title. It's a smaller font and the colour has a lower contrast.</p>
             <button>Sign up</button>
             <img src="###" alt="This is a placeholder for an image.">
