--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="###" alt="This is a placeholder for an image.">
         </div>
         <div class="random-info">
-            <h2>Some random information</h2>
+            <h2 class="info-head">Some random information</h2>
             <div class="ran-img">
                 <img src="###" alt="random image">
                 <div class="text">This is some subtext under an illustration or image</div>
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div class="quote">
-            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="inspire">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
             <p><strong>-Thor, God of Thunder</strong></p>
         </div>
         <div class="sign-up">
