--- a/index.html
+++ b/index.html
@@ -13,28 +13,32 @@
             <a href="###">header link three</a>
         </div>
         <div class="intro">
-            <h2 class="main">This website is awesome</h2>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the colour has a lower contrast.</p>
-            <button>Sign up</button>
+            <div class="intro-text">
+                <h2 class="main">This website is awesome</h2>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the colour has a lower contrast.</p>
+                <button>Sign up</button>
+            </div>
             <img src="###" alt="This is a placeholder for an image.">
         </div>
         <div class="random-info">
             <h2 class="info-head">Some random information</h2>
-            <div class="ran-img">
-                <img src="###" alt="random image">
-                <div class="text">This is some subtext under an illustration or image</div>
-            </div>
-            <div class="ran-img">
-                <img src="###" alt="random image">
-                <div class="text">This is some subtext under an illustration or image</div>
-            </div>
-            <div class="ran-img">
-                <img src="###" alt="random image">
-                <div class="text">This is some subtext under an illustration or image</div>
-            </div>
-            <div class="ran-img">
-                <img src="###" alt="random image">
-                <div class="text">This is some subtext under an illustration or image</div>
+            <div class="ran-imgs">
+                <div class="ran-img">
+                    <img src="###" alt="random image">
+                    <div class="text">This is some subtext under an illustration or image</div>
+                </div>
+                <div class="ran-img">
+                    <img src="###" alt="random image">
+                    <div class="text">This is some subtext under an illustration or image</div>
+                </div>
+                <div class="ran-img">
+                    <img src="###" alt="random image">
+                    <div class="text">This is some subtext under an illustration or image</div>
+                </div>
+                <div class="ran-img">
+                    <img src="###" alt="random image">
+                    <div class="text">This is some subtext under an illustration or image</div>
+                </div>
             </div>
         </div>
         <div class="quote">
