--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the colour has a lower contrast.</p>
                 <button>Sign up</button>
             </div>
-            <img src="###" alt="This is a placeholder for an image.">
+            <div class="placeholder">This is a placeholder for an image.</div>
         </div>
         <div class="random-info">
             <h2 class="info-head">Some random information</h2>
