--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
             <h2 class="info-head">Some random information</h2>
             <div class="ran-imgs">
                 <div class="ran-img">
-                    <img src="###" alt="random image">
+                    <div class="img"></div>
                     <div class="text">This is some subtext under an illustration or image</div>
                 </div>
                 <div class="ran-img">
-                    <img src="###" alt="random image">
+                    <div class="img"></div>
                     <div class="text">This is some subtext under an illustration or image</div>
                 </div>
                 <div class="ran-img">
-                    <img src="###" alt="random image">
+                    <div class="img"></div>
                     <div class="text">This is some subtext under an illustration or image</div>
                 </div>
                 <div class="ran-img">
-                    <img src="###" alt="random image">
+                    <div class="img"></div>
                     <div class="text">This is some subtext under an illustration or image</div>
                 </div>
             </div>
