--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <div class="quote">
             <p class="inspire">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-            <p><strong>-Thor, God of Thunder</strong></p>
+            <p class="thor"><strong>-Thor, God of Thunder</strong></p>
         </div>
         <div class="sign-up">
             <div class="call-to">
