--- a/index.html
+++ b/index.html
@@ -47,12 +47,14 @@
             <p class="inspire">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
             <p class="thor"><strong>-Thor, God of Thunder</strong></p>
         </div>
-        <div class="sign-up">
-            <div class="call-to">
-                <h3>Call to action! It's time!</h3>
-                <p>Sign up for our product by clicking that button right over there!</p>
+        <div class="container">
+            <div class="sign-up">
+                <div class="call-to">
+                    <h3>Call to action! It's time!</h3>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button class="lower">Sign up</button>
             </div>
-            <button>Sign up</button>
         </div>
         <div class="footer">
             <div>Copyright The Odin Project 2021</div>
