--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
             <div class="sign-up">
                 <div class="call-to">
                     <h3>Call to action! It's time!</h3>
-                    <p>Sign up for our product by clicking that button right over there!</p>
+                    <p class="product">Sign up for our product by clicking that button right over there!</p>
                 </div>
                 <button class="lower">Sign up</button>
             </div>
         </div>
         <div class="footer">
-            <div>Copyright The Odin Project 2021</div>
+            <div>Copyright &copy The Odin Project 2021</div>
         </div>
 
 
